<resources>
    <!-- Global String Resources -->
    <string name="slogan">Bringing rehabilitation\nfrom the clinic to your home</string>

    <!-- activity_bluetooth.xml String Resources -->
    <string name="btnCalibrateSensorString">Calibrate Sensor</string>
    <string name="btnSensorExercisesString">Sensor Exercises</string>
    <string name="btnConnectToSensorString">Connect to Sensor</string>
    <string name="connectSensorString">Connect Sensor</string>
    <string name="btSuccessMessage"><b>You are now connected</b>\n\nYour T\'ena sensor\nis now connected</string>
    <string name="btConnectMessage">Click the icon to\nconnect your sensor</string>
    <string name="btFailureMessage"><b>Could not connect</b>\n\nCheck the Bluetooth\nconnection and try again</string>

    <!-- activity_login_firebase.xml & activity_create_account.xml String Resources -->
    <string name="btnSignInString">Sign In</string>
    <string name="btnRegisterString">Register</string>
    <string name="btnSignUpString">Sign Up</string>
    <string name="btnLogInString">Log In</string>
    <string name="btnForgotPasswordString">Forgot Password?</string>
    <string name="passwordLoginString">Password</string>
    <string name="usernameLoginString">Username</string>

    <!-- activity_login.xml String Resources -->
    <string name="login_title">T\'ena Sensor - Login</string>
    <string name="register_title">T\'ena Sensor - Register</string>
    <string name="app_name">T\'ena Sensor</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list">Bluetooth Devices</string>
    <string name="web_client_id">855402615060-4trvhemml151pl1pdiunglmf70ualse1.apps.googleusercontent.com</string>

    <!-- activity_instructions String Resources -->
    <string name="instructionsHeaderString">Instructions</string>
    <string name="block_instructions"><li>Place your hand flat on the table.</li>
        \n\n<li>When prompted, grasp the block and place it on the top of the shelf.</li>
        \n\n<li>Return your hand to the table.</li>
    </string>
    <string name="water_instructions"><li>Place your hand flat on the table.</li>
        \n\n<li>When prompted, grasp the can and bring it up to your lips.</li>
        \n\n<li>Place the can back on the start position.</li>
        \n\n<li>Return your hand to the table.</li>
    </string>
    <string name="cup_instructions"><li>Place your hand flat on the table.</li>
        \n\n<li>On the green \'go\' signal, grasp the block and place it on the top of the shelf.</li>
        \n\n<li>Return your hand to the table.</li>
    </string>
    <string name="rod_instructions"><li>Place your hand flat on the table.</li>
        \n\n<li>When prompted, grasp the pencil and place it in the holder.</li>
        \n\n<li>Return your hand to the table.</li>
    </string>
    <string name="btnGoToDataCollectionString">Click to start data collection </string>

    <!-- activity_record_data.xml String Resources -->
    <string name="collectData"><b>Collecting Data</b></string>
    <string name="blockExercise"><b>Block Placing</b></string>
    <string name="fingerNoseExercise"><b>Finger to Nose</b></string>
    <string name="cupExercise"><b>Cup Pouring</b></string>
    <string name="rodExercise"><b>Rod Placing</b></string>
    <string name="flatExercise">Place your hand flat on the\ntable and stay still</string>
    <string name="sideExercise">Place your hand flat by your\nside and stay still</string>
    <string name="exerciseFailed"><b>Movement Detected</b>\n\nPlease keep your hand still\nand try again.</string>
    <string name="exerciseInProgress">When you have completed the\ntrial, place your hand back on the\ntable and stay still</string>
    <string name="exerciseComplete"><b>Success</b>\n\nYou have completed\nthis exercise for today.</string>
    <string name="allExercisesComplete"><b>Success</b>\n\nYou have completed\nall exercises for today.</string>
    <string name="stopExerciseString">Exit Exercise</string>
    <string name="nextTrialString">Next trial</string>
    <string name="retryTrialString">Retry trial</string>
    <string name="stopCollectionString">Stop Data Collection</string>
    <string name="percent">\npercent</string>

    <!-- activity_calibration.xml String Resources -->
    <string name="sensorCalibration"><b>Sensor Calibration</b></string>
    <string name="calibrationStepOneString"><b>Step One</b>\n\nPlace the T\'ena sensor\non a level surface.</string>
    <string name="calibrationInProgressString"><b>Calibration in Progress</b></string>
    <string name="calibrationStepTwoString"><b>Step Two</b>\n\nPlace the T\'ena sensor\nface down in its cradle.</string>
    <string name="calibrationSuccessString"><b>Success</b>\n\nYour T\'ena sensor\nis now calibrated.</string>
    <string name="btnStartCalibrateString">Next</string>
    <string name="selectExerciseString">Sensor Exercises</string>

    <!-- fragment_bluetooth.xml String Resources -->
    <string name="listOfDevicesHeader">List of devices</string>
    <string name="devicePairingHeader">Choose the device you want to pair with</string>
    <string name="availableDevicesHeader">AVAILABLE DEVICES</string>
    <string name="connectionSuccessfulMessage"><b>You are now connected.</b> \nYour T\'ena Sensor is now connected.</string>
    <string name="btnFinishPairingString">Finish</string>
    <string name="exerciseHeaderString">Sensor Exercises</string>

</resources>
