<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_gravity="end"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:scaleType="fitXY"
        android:src="@drawable/settings"/>

    <Button
        android:id="@+id/settings"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_gravity="end"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@android:color/transparent"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:text="@string/connectSensorString"
            android:ellipsize="end"
            android:textStyle="bold"
            android:textSize="@dimen/headerSize"
            android:textColor="@color/colorText"
            android:layout_gravity="center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:visibility="visible"
            android:background="@color/colorText"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/imageSize"
            android:paddingBottom="@dimen/imageOffset">
            <ImageView
                android:id="@+id/connected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/calibration1" />
            <Button
                android:id="@+id/ToggleBluetooth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:background="@android:color/transparent"/>
        </FrameLayout>


        <TextView
            android:id="@+id/bt_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minLines="4"
            android:text="@string/btConnectMessage"
            android:textSize="@dimen/fontSize"
            android:textColor="@color/colorText"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:layout_marginVertical="10dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">
        <Button
            android:id="@+id/CalibrateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/button_padding"
            android:layout_weight="1"
            android:text="@string/btnCalibrateSensorString"
            android:visibility="invisible"
            android:textColor="@color/colorBackground">
        </Button>
        <Button
            android:id="@+id/ExerciseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/button_padding"
            android:layout_weight="1"
            android:text="@string/btnSensorExercisesString"
            android:visibility="invisible"
            android:textColor="@color/colorBackground">
        </Button>
        <Button
            android:id="@+id/ConnectButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/button_padding"
            android:text="@string/btnConnectToSensorString"
            android:visibility="gone"
            android:textColor="@color/colorBackground">
        </Button>
    </LinearLayout>

</FrameLayout>