<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:text="@string/collectData"
            android:textColor="@color/colorText"
            android:textSize="@dimen/headerSize" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorText"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/newton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="90dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/newton_1" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/newtonscradle"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/hand_position"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:gravity="center"
                android:padding="10dp"
                android:rotation="0"
                android:scaleType="fitCenter"
                android:src="@drawable/startposition2" />

            <TextView
                android:id="@+id/countdown"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/colorText"
                android:textSize="200px" />

            <ProgressBar
                android:id="@+id/progressbar_timerview"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_margin="50dp"
                android:indeterminate="false"
                android:progressDrawable="@drawable/circle_timer2" />

            <ProgressBar
                android:id="@+id/progressbar1_timerview"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center"
                android:layout_margin="50dp"
                android:indeterminate="false"
                android:progressDrawable="@drawable/circle_timer1" />

                <TextView
                    android:id="@+id/repetitions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/headerSize"
                    android:textStyle="bold" />


            <ProgressBar
                android:id="@+id/progressbar_repview"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="50dp"
                android:layout_gravity="center_horizontal|bottom"
                android:indeterminate="false"
                android:progressDrawable="@drawable/circle_timer2"
                android:visibility="invisible" />

            <ProgressBar
                android:id="@+id/progressbar1_repview"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="50dp"
                android:layout_gravity="center_horizontal|center"
                android:indeterminate="false"
                android:progressDrawable="@drawable/circle_timer1"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/check"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:paddingHorizontal="80dp"
                android:scaleType="fitCenter"
                android:src="@drawable/success"
                android:visibility="invisible" />
        </FrameLayout>

        <TextView
            android:id="@+id/countdown_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:minLines="4"
            android:text="@string/flatExercise"
            android:textColor="@color/colorText"
            android:textSize="@dimen/fontSize" />


    </LinearLayout>

    <Button
        android:id="@+id/stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:background="@color/colorButton"
        android:paddingVertical="@dimen/button_padding"
        android:text="@string/stopCollectionString"
        android:textColor="@color/colorBackground"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/button_padding">

        <Button
            android:id="@+id/continueExercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/button_padding"
            android:layout_weight="1"
            android:background="@color/colorButton"
            android:paddingVertical="@dimen/button_padding"
            android:text="@string/nextTrialString"
            android:textColor="@color/colorBackground"
            android:visibility="invisible" />

        <Button
            android:id="@+id/stopExercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/button_padding"
            android:layout_weight="1"
            android:background="@color/colorButton"
            android:paddingVertical="@dimen/button_padding"
            android:text="@string/stopExerciseString"
            android:textColor="@color/colorBackground"
            android:visibility="invisible" />
    </LinearLayout>

</FrameLayout>